# csdk-core

./: CMakeLists.txt  README.md
config/: xq.ini
ext/base64/: base64.c  base64.h
ext/jread/: jRead.c
ext/jwrite/: jWrite.c  jWrite.h
headers/ext/base64/: base64.h
headers/ext/http-codes/: http-codes.h
headers/ext/jwrite/: jWrite.h
headers/ext/uri_encode/: uri_encode.h
headers/xq/: config.h  connect.h  xq.h
headers/xq/algorithms/aes/: aes_decrypt.h  aes_encrypt.h
headers/xq/algorithms/nist/: nist_decrypt.h  nist_encrypt.h
headers/xq/algorithms/otp/: otp_decrypt.h  otp_encrypt.h
headers/xq/services/: crypto.h
headers/xq/services/dashboard/: contact.h  dashboard.h  group.h
headers/xq/services/quantum/: quantum.h
headers/xq/services/sub/: authorize.h  authorize_alias.h  authorize_trusted.h  code_validation.h  combined.h  delegate.h  exchange.h  packet.h  settings.h  subscriber.h
headers/xq/services/val/: expiration.h  key_access.h
source/ext/: CMakeLists.txt
source/ext/base64/: CMakeLists.txt  base64.c
source/ext/inih/: CMakeLists.txt  ini.c
source/ext/jread/: CMakeLists.txt  jRead.c
source/ext/jwrite/: CMakeLists.txt  jWrite.c
source/ext/uri_encode/: CMakeLists.txt  uri_encode.c
source/xq/: CMakeLists.txt  config.c  connect.c
source/xq/algorithms/: CMakeLists.txt
source/xq/algorithms/aes/: CMakeLists.txt  aes_decrypt.c  aes_encrypt.c
source/xq/algorithms/nist/: CMakeLists.txt  nist_decrypt.c  nist_encrypt.c
source/xq/algorithms/otp/: CMakeLists.txt  otp_decrypt.c  otp_encrypt.c
source/xq/services/: CMakeLists.txt  crypto.c  decrypt.c  encrypt.c
source/xq/services/dashboard/: CMakeLists.txt  contact.c  dashboard.c  group.c
source/xq/services/quantum/: CMakeLists.txt  quantum.c
source/xq/services/sub/: CMakeLists.txt  authorize.c  authorize_alias.c  authorize_trusted.c  code_validation.c  combined.c  delegate.c  exchange.c  packet.c  settings.c  subscriber.c
source/xq/services/val/: CMakeLists.txt  expiration.c  key_access.c
test/: test.c
